<resources>
    <string name="app_name">MintWallet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appName">MintWallet</string>
    <string name="logo_description_pt">logo app carteira verde</string>

    <string name="welcome_step1_image_description">pessoa analisando graficos</string>
    <string name="welcome_step1_title">Uma maneira fácil de gerenciar suas finanças</string>
    <string name="welcome_step1_decription">Gerencie suas finanças de forma simples e eficiente. Nosso app oferece recursos avançados para controle de gastos, planejamento financeiro e muito mais.</string>

    <string name="welcome_step2_image_description">pessoa analisando graficos</string>
    <string name="welcome_step2_title">Defina seus objetivos financeiros</string>
    <string name="welcome_step2_decription">Defina metas financeiras para guiar suas decisões e realizar sonhos, como viajar pelo mundo com a pessoa que ama.</string>

    <string name="welcome_step3_image_description">pessoa analisando graficos</string>
    <string name="welcome_step3_title">Uma nova experiência de investimento</string>
    <string name="welcome_step3_decription">Comece ainda hoje a explorar novas experiências de investimento para expandir seu portfólio e alcançar seus objetivos financeiros.</string>

    <string name="next">Próximo</string>
    <string name="skip">Pular</string>
    <string name="login">Entrar</string>
    <string name="signin_login_title">Entre com sua conta</string>
    <string name="signin_login_welcome">Bem-vindo!</string>

    <string name="email">Email</string>
    <string name="required">Obrigatório</string>
    <string name="password">Senha</string>
    <string name="signin_login_reset_pwd">Esqueceu a senha?</string>
    <string name="signin_login_other_title">Entre com</string>
    <string name="signin_login_register_tile">Não possui conta ?</string>
    <string name="signin_login_register_link"> Cadastrar-se</string>
    <string name="goal_title">Metas</string>
    <string name="settings_title">configurações</string>
    <string name="signin_register_title">Cadastrar-se</string>
    <string name="signin_register_description">Crie sua conta</string>
    <string name="signin_register_login_tile">Já possui conta?</string>
    <string name="signin_register_login_link"> Entrar</string>
    <string name="full_name">Nome Completo</string>
    <string name="confirm_password">Confirme sua senha</string>
    <string name="signin_register_resetpwd_title">Esqueceu sua senha?</string>
    <string name="signin_register_resetpwd_description">Enviaremos um e-mail com instruções de como redefinir sua senha.</string>
    <string name="signin_reset_imagem_icon_desc">flecha indicando opção de retornar a pagina anterior</string>
    <string name="register">Cadastrar-se</string>
    <string name="send">enviar</string>
    <string name="Done">Feito</string>
    <string name="check_email">Verifique seu e-mail</string>
    <string name="icon_mensagem">icone de mensagem\n</string>
    <string name="icon">icone</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="payment">Pagamento</string>
    <string name="transfer">Transferencia</string>
    <string name="unhandlerError">Ops… Parece que algo não funcionou! Tente novamente mais tarde</string>
    <string name="SendEmailConfirm">Por favor, verifique sua caixa de entrada e siga as instruções.</string>
    <string name="email_already_in_use">Email já em uso</string>
    <string name="invalid_email">Email informado não é valido</string>
    <string name="weak_password">A senha deve conter 6 caracteres </string>
    <string name="id_web_client">290619583090-f6v586a51ico6eed5vh8voshbercof22.apps.googleusercontent.com</string>
    <string name="pref_key">USER_TOKEN</string>
    <string name="facebook_app_id">1096818451429750</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">39232bbc3d586647e58b739e7a6de7d0</string>
    <string name="message_amount_required">O valor movimentado deve ser preenchido</string>
    <string name="message_targer_required">O prazo final deve ser escolhido</string>
    <string name="action_settings">Settings</string>

    <string name="menu_bottom_home">Home</string>
    <string name="menu_bottom_analytics">Análise</string>
    <string name="menu_bottom_target">Metas</string>
    <string name="menu_bottom_settings">Config.</string>
    <string name="title_new_transfer">Registrar movimentação</string>
    <string name="title_enter_amount">Digite o valor</string>
    <string name="register_next">Registrar</string>
    <string name="prefix_amount">R$</string>
    <string name="describe_amount">Descrição</string>
    <string name="checkmark">Checkmark</string>
    <string name="send_money_successfully">Transação monetário registrada!</string>
    <string name="id_transaction">Id da Transação</string>
    <string name="target_title">Escolha qual será sua nova meta</string>
    <string name="description_target">Escolha o ícones para descrever seus objetivos</string>
    <string name="house">Casa</string>
    <string name="icon_vacation">Férias</string>
    <string name="vacation">Férias</string>
    <string name="more">mais</string>
    <string name="title_activity_home">home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Monthly">Mensal</string>
    <string name="recent_transactions">Transações recentes</string>
    <string name="money_income">Renda monetária</string>
    <string name="spread">Gastos</string>
    <string name="set_your_goal">Defina sua meta</string>
    <string name="icons_describe_goals">Escolha o ícones para descrever seus objetivos</string>
    <string name="target_saving">Valor mensal a ser guardado</string>
    <string name="targets_achieve">Valor para se alcançar a metas</string>
    <string name="target_achieved">Prazo final</string>
    <string name="description_target_a">Quando a meta pode ser alcançada</string>
    <string name="target">Prazo</string>
    <string name="confirm">Confirme a criaćão da nova meta</string>
    <string name="Goal">Meta</string>
    <string name="target_motivation">Será usado como base o valor do CDI informado por Banco Central do Brasil</string>
    <string name="send_new_goal">Nova meta cadastrada</string>
    <string name="signout">Sair da sua conta</string>
    <string name="saving_plans">Saving Plans</string>
    <string name="my_saving_plans">Minhas metas</string>
    <string name="add">Add</string>
    <string name="new_car">New Car</string>
    <string name="new_home">New Home</string>
    <string name="new_cloth">New Cloth</string>
    <string name="marriage_plan">Marriage Plan</string>
    <string name="parent">Parent</string>
    <string name="price">$5,000.00</string>
    <string name="leading_icon">Leading Icon</string>
    <string name="trailing_icon">Trailing Icon</string>
    <string name="create_goal">Nova Meta</string>
</resources>